new page overview table

--- a/animation_view.html
+++ b/animation_view.html
@@ -47,6 +47,7 @@
                 <a href="pages/index_single_choice.html">Single Group View</a>
             </div>
         </div>
+        <a href="pages/index_table.html">Overview Table</a>
 
 
 
