--- a/index_prepare_data.html
+++ b/index_prepare_data.html
@@ -8,6 +8,8 @@
 <script src="prepare js/prepare_data_snap_densityPlot.js"></script>
 <script src="prepare js/prepare_data_scatter_matrix.js"></script>
 <script src="prepare js/prepare_data_animation_perweek.js"></script>
+<script src="prepare js/prepare_data_table.js"></script>
+
 
 <style>
     div.cont {
@@ -29,7 +31,7 @@
 
     <div class="cont">
         <p>
-            Converting the data into 4 different files. <br> As soon as a file has downloaded automatically on to your desktop, the process is finished.
+            Converting the data into 5 different files. <br> As soon as a file has downloaded automatically on to your desktop, the process is finished.
             <br>Make sure the files are saved with their given names in the data folder.
         </p>
     </div>
@@ -43,6 +45,7 @@
         prepare_snap_densityPlot();
         prepare_data_scatter_matrix();
         prepare_data_animation_perweek();
+        prepare_data_table();
     </script>
 
 </body>
