--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                 <a href="pages/index_comparison.html">Two Group Comparison View</a>
                 <a href="pages/index_single_choice.html">Single Group View</a>
 
-
             </div>
-        </div>
 
+
+        </div>
+        <a href="pages/index_table.html">Overview Table</a>
     </div>
 
 </header>
