added tableau only for 2020

--- a/pages/index_table.html
+++ b/pages/index_table.html
@@ -126,9 +126,9 @@
 <p style='position: relative;left:100px;width: 80%'>
     <b style="color: red;">The list of the test-subject is not updated as of yet. Therefore colums regarding age, occupation, single/pairs and gender are not complete, while colums like 'All' and the Weekdays are.
     The data considered range from 11.09.2019 to the last week of 2020 (upto and including 01.03.2021).</b><br>
-    <br>This page shows two tables. The first table <i>Test-Subject Meta-Information </i>lists the number of times a certain attribute is observed amongst all test-subjects. <br> The second table lists the usage (rotations or open/close action) that was
-    measured per sensor. The values can either be shown as <b>absolute </b>number of observations, <b>average</b> by number of weeks or as the <b>percentage</b> across all the sensors. Furthermore, rows can be reordered for any column and the colums can
-    be added/removed using buttons. This is possible for the following subject attributes. The respective buttons have a <text style='color: steelblue'>steelblue</text> border.
+    <br>This page shows three tables. The first table <i>Test-Subject Meta-Information </i>lists the number of times a certain attribute is observed amongst all test-subjects. <br> The second table lists the usage (rotations or open/close action) that
+    was measured per sensor. The values can either be shown as <b>absolute </b>number of observations, <b>average</b> by number of weeks or as the <b>percentage</b> across all the sensors. Furthermore, rows can be reordered for any column and the colums
+    can be added/removed using buttons. This is possible for the following subject attributes. The respective buttons have a <text style='color: steelblue'>steelblue</text> border.
     <ul style='position: relative;left:100px;'>
         <li><b>Age</b>: This includes the age of all single test-subjects and pairs of same age. The categories include: 18-30,30-45,45-60 and 60-75.</li>
         <li><b>Gender</b>: This includes the gender of all single test-subjects and pairs. <i>mixed</i> includes pairs of female and male test-subject, <br> female include single female test-subjects as well as pairs where both subjects are female (and same
@@ -139,7 +139,8 @@
 </p>
 
 <p style='position: relative;left:100px;width: 80%'>
-    Note, the columns do not all fit onto the page. In this case, horizontal scrolling is activated.
+    The third table is the same as the second, with the only difference that the second table contains all data (measured from 11.09.2019 until 01.03.2021), while the third table only considers the data measuered in the year 2020. <br> Note, the columns
+    do not all fit onto the page. In this case, horizontal scrolling is activated.
 </p>
 <h2 style='position: relative;left:50px'>Test-Subject Meta-Information (Quantity)</h2>
 
@@ -150,6 +151,12 @@
 </h2>
 <div class="container" style='  overflow-x: scroll;'>
     <table id="example" class="display" style="width:90%; ">
+    </table>
+</div>
+<h2 style='position: relative; left:50px'>Sensor Data Measurement Quantity by Sensor and Meta-Information for 2020 <text id="title2020" style="font-size:medium"></text>
+</h2>
+<div class="container" style='  overflow-x: scroll;'>
+    <table id="igong" class="display" style="width:90%; ">
     </table>
 </div>
 
