--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
         </div>
         <a href="pages/index_table.html">Overview Table</a>
+        <a href="pages/index_questionnaire.html">Questionnaire Results</a>
+
     </div>
 
 </header>
