--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -75,6 +75,7 @@
         </div>
 
         <a href="index_table.html">Overview Table</a>
+        <a href="index_questionnaire.html">Questionnaire Results</a>
 
 
 
