--- a/pages/index_single_choice.html
+++ b/pages/index_single_choice.html
@@ -119,6 +119,8 @@
 
 
         <a href="index_table.html">Overview Table</a>
+        <a href="index_questionnaire.html">Questionnaire Results</a>
+
 
     </div>
 </header>
