--- a/pages/index_table.html
+++ b/pages/index_table.html
@@ -116,6 +116,7 @@
         </div>
 
         <a href="index_table.html" style='background-color: dodgerblue;  color: white;'>Overview Table</a>
+        <a href="index_questionnaire.html">Questionnaire Results</a>
 
 
     </div>
